// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component should render correctly 1`] = `
<p-text>
  Text
</p-text>
`;

exports[`Text component should render correctly in variant small 1`] = `
<p-text
  variant="small"
>
  Text
</p-text>
`;
